--- a/templates/home2.html
+++ b/templates/home2.html
@@ -93,11 +93,11 @@
     <header>
         <nav>
             <ul>
-                <li><a href="home.html">Home</a></li>
-                <li><a href="view_product.html">View Products</a></li>
-                <li><a href="about_us.html">About Us</a></li>
-                <li><a href="contact_us.html">Contact Us</a></li>
-                <li><a href="logout.html">Logout</a></li>
+                <li><a href="/home.html">Home</a></li>
+                <li><a href="/view_product.html">View Products</a></li>
+                <li><a href="/about_us.html">About Us</a></li>
+                <li><a href="/contact_us.html">Contact Us</a></li>
+                <li><a href="/logout.html">Logout</a></li>
             </ul>
         </nav>
     </header>
