--- a/templates/view_product.html
+++ b/templates/view_product.html
@@ -123,37 +123,45 @@
       <div class="product">
         <img src="{{url_for('static',filename='shoes.jpeg')}}" alt="Shoes">
         <h3>Shoes</h3>
+        <p>$10</p>
         <a href="{{url_for('static',filename='shoes.jpeg')}}" class="button">BUY</a>
       </div>
 
       <div class="product">
         <img src="{{url_for('static',filename='lip_gloss.jpeg')}}" alt="Lip Gloss">
         <h3>Lip Gloss</h3>
-        <a href="#" class="button">BUY</a>
+        <p>$7</p>
+        <a href="{{url_for('static',filename='lip_gloss.jpeg')}}" class="button">BUY</a>
       </div>
 
       <div class="product">
         <img src="{{url_for('static',filename='maskara.jpeg')}}" alt="Mascara">
         <h3>Mascara</h3>
-        <a href="#" class="button">BUY</a>
+        <p>$10</p>
+        <a href="{{url_for('static',filename='maskara.jpeg')}}" class="button">BUY</a>
       </div>
 
       <div class="product">
         <img src="{{url_for('static',filename='Oddity_-_DISSENT_Matte_Lipstick.jpeg')}}" alt="DISSENT Matte Lipstick">
         <h3>DISSENT Matte Lipstick</h3>
-        <a href="#" class="button">BUY</a>
+        <p>$5</p>
+        <a
+        href="{{url_for('static',filename='Oddity_-_DISSENT_Matte_Lipstick.jpeg')}}"
+        class="button">BUY</a>
       </div>
 
       <div class="product">
         <img src="{{url_for('static',filename='Beautiful_chain_watch.jpeg')}}" alt="Beautiful Chain Watch">
         <h3>Beautiful Chain Watch</h3>
-        <a href="#" class="button">BUY</a>
+        <p>$25</p>
+        <a href="{{url_for('static',filename='Beautiful_chain_watch.jpeg')}}" class="button">BUY</a>
       </div>
 
       <div class="product">
         <img src="{{url_for('static',filename='perfume.jpeg')}}" alt="Black Opium Perfume">
         <h3>Black Opium Perfume</h3>
-        <a href="#" class="button">BUY</a>
+        <p>$20</p>
+        <a href="{{url_for('static',filename='perfume.jpeg')}}" class="button">BUY</a>
       </div>
     </section>
     <footer>
