--- a/templates/home.html
+++ b/templates/home.html
@@ -80,8 +80,8 @@
             background-color: #333;
             color: white;
             box-shadow: 0 0 10px rgb(51, 255, 0);
-            padding: 10px;
-            text-align:right; /* Center text in the footer */
+            padding: 5px;
+            text-align:center; /* Center text in the footer */
         }
     </style>
 </head>
@@ -89,7 +89,7 @@
     <header>
         <nav>
             <ul>
-                <li><a href="home.html">Home</a></li>
+                <!--li><a href="home.html">Home</a></li!-->
                 <li><a href="register.html">Register</a></li>
                 <li><a href="login.html">Login</a></li>
             </ul>
@@ -109,7 +109,7 @@
     </main>
 
     <footer>
-        <p>© 2024 Online Fashion Shopping. All rights reserved.</p>
+        <p>&copy; 2024 Online Fashion Shopping. All rights reserved.</p>
     </footer>
 </body>
 </html>
