--- a/templates/contact_us.html
+++ b/templates/contact_us.html
@@ -1,72 +1,8 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>Contact Us</title>
-	<style>
+{%extends 'menu_bar.html'%}
 
-		body{
-			background-image:url("jackets and shoes.jpg") ; /*needs update*/
-			background-repeat: repeat;
-			background-size: cover;
-		}
-		ul {
-			background-color: black;
-		}
-		header a {
-			color: aliceblue;
-		}
-		body {
-			font-family: Arial, sans-serif;
-			background-color: #11b89c;
-			padding: 20px;
-		}
-
-		form {
-			background-color:white;
-			padding: 20px;
-			border-radius: 10px;
-			box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-		}
-
-		input[type="text"],
-		input[type="email"],
-		textarea {
-			padding: 10px;
-			border: none;
-			border-radius: 5px;
-			margin-bottom: 10px;
-			width: 100%;
-		}
-
-		input[type="submit"] {
-			background-color: #4CAF50;
-			color:transparent;
-			padding: 10px;
-			border: none;
-			border-radius: 5px;
-			cursor: pointer;
-			width: auto;
-			margin-top: 10px;
-		}
-
-		input[type="submit"]:hover {
-			background-color: #45a049;
-		}
-		h1 {
-			color: aliceblue;
-		}
-	</style>
-</head>
-<header>
-	<ul>
-		<li><a href="home2.html">Back</a></li>
-		
-	</ul>
-</header>
-<body>
+{%block content%}
 	<h1>Contact Us</h1>
 	<form>
 <a>onlinefashionshopping24x7@gmail.com</a>
 	</form>
-</body>
-</html>
+{%endblock%}
