new file:   .gitignore 	modified:   app.py 	modified:   templates/login.html 	modified:   templates/register.html

--- a/templates/login.html
+++ b/templates/login.html
@@ -87,8 +87,8 @@
     <center>
         <!-- Form action points to '/login' -->
         <form id="loginForm" onsubmit="return handleLogin(event)">
-            <label for="username"><b>UserName:</b></label>
-            <input type="text" id="username" name="username" placeholder="Enter your username" required>
+            <label for="username"><b>Email:</b></label>
+            <input type="text" id="username" name="username" placeholder="Enter your email" required>
 
             <label for="password"><b>Password:</b></label>
             <input type="password" id="password" name="password" placeholder="Enter your password" required>
