modified:   app.py 	modified:   templates/home.html 	modified:   templates/login.html 	modified:   templates/menu_bar.html 	modified:   templates/register.html

--- a/templates/home.html
+++ b/templates/home.html
@@ -90,8 +90,8 @@
         <nav>
             <ul>
                 <!--li><a href="home.html">Home</a></li!-->
-                <li><a href="register.html">Register</a></li>
-                <li><a href="login.html">Login</a></li>
+                <li><a href="register">Register</a></li>
+                <li><a href="login">Login</a></li>
             </ul>
         </nav>
     </header>
@@ -103,8 +103,8 @@
         </section>
 
         <form>
-            <button type="button" onclick="window.location.href='register.html'">Register</button><br><br>
-            <button type="button" onclick="window.location.href='login.html'">Login</button>
+            <button type="button" onclick="window.location.href='register'">Register</button><br><br>
+            <button type="button" onclick="window.location.href='login'">Login</button>
         </form>
     </main>
 
