--- a/templates/menu_bar.html
+++ b/templates/menu_bar.html
@@ -160,10 +160,10 @@
     <header>
         <nav>
             <ul>
-                <li><a href="/home2.html">Home</a></li>
-                <li><a href="/view_product.html">View Products</a></li>
-                <li><a href="/about_us.html">About Us</a></li>
-                <li><a href="/contact_us.html">Contact Us</a></li>
+                <li><a href="/home2">Home</a></li>
+                <li><a href="/view_product">View Products</a></li>
+                <li><a href="/about_us">About Us</a></li>
+                <li><a href="/contact_us">Contact Us</a></li>
                 <li><a href="/logout">Logout</a></li>
             </ul>
         </nav>
