--- a/templates/register.html
+++ b/templates/register.html
@@ -79,7 +79,7 @@
 <header>
 	<ul>
 	
-		<a href="home.html">Back</a>
+		<a href="home">Back</a>
 	</ul>
 </header>
 <footer>
@@ -88,7 +88,7 @@
 	</ul>
 	</footer>
 <body>
-	<form action="/register.html" method='POST'>
+	<form action="/register" method='POST'>
 		<b>
 		<h2>Registration Form</h2>
 		<label for="first_name">First Name</label>
