modified:   templates/register.html

--- a/templates/register.html
+++ b/templates/register.html
@@ -13,7 +13,7 @@
 		}
 		ul {
 			background-color: black;
-		width:;
+		width: 10px;;
 		}
 		a{
 			color: white;
@@ -24,6 +24,7 @@
 		 body 
 
          {
+			background-image:url("{{url_for('static',filename='register.jpeg')}}") ;
 			background-color: aquamarin;
 			backface-visibility: inherit;
 	 		background-size: cover;
