modified:   templates/register.html

--- a/templates/register.html
+++ b/templates/register.html
@@ -71,6 +71,14 @@
 		input[type="submit"]:hover {
 			background: #45a049;
 		}
+		.box{
+			background-color: #f9f9f9;
+        	border: 1px solid #ccc;
+			margin: 10px;
+        	padding: 15px;
+	        text-align: center;
+        	width: 40%;
+		}
 	</style>
 	<script type="text/javascript">
 	</script>
@@ -88,7 +96,8 @@
 
 	</ul>
 	</footer>
-<body>
+<body><center>
+	<div class="box">
 	<form action="/register" method='POST'>
 		<b>
 		<h2>Registration Form</h2>
@@ -115,6 +124,8 @@
 	  </center>
 	</b>
 	</form>
+    </div>
+	</center>
 </body>
 </html>
 
