--- a/templates/menu_bar.html
+++ b/templates/menu_bar.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{{url_for('static',filename='css/styles.css')}}"> <!--this is also acceptable static/css/styles.css -->
-    <title>Online Fashion Shopping</title>
+    <title>{%block title%}Online Fashion Shopping{%endblock%}</title>
 </head>
 <body>
     <header>
