--- a/templates/about_us.html
+++ b/templates/about_us.html
@@ -1,4 +1,7 @@
 {%extends 'menu_bar.html'%}
+
+{%block title%}about us{%endblock%}
+
 {%block content%}
 	<h1>About Us</h1>
 	<div class="container">
