--- a/templates/menu_bar.html
+++ b/templates/menu_bar.html
@@ -10,7 +10,7 @@
     <header>
         <nav>
             <ul>
-                <li><a href="/home2">Home</a></li>
+                <li><a href="/home">Home</a></li>
                 <li><a href="/view_product">View Products</a></li>
                 <li><a href="/profile">My profile</a></li>
                 <li><a href="/about_us">About Us</a></li>
