--- a/templates/admin_add.html
+++ b/templates/admin_add.html
@@ -1,113 +1,112 @@
-
 <!DOCTYPE html>
 <html>
 <head>
-	<title>admin add product</title>
-	<style>
-		header
-		{
-			padding: 10px;
-		}
-		h2{
-			
-			color: rgb(1, 7, 1);
-		}
-		ul {
-			background-color: black;
-		}
-		a{
-			color: white;
-		}
-		footer{
-			color: black;
-		}
-		 body 
-
-         {
-			background-color: aquamarin;
-			backface-visibility: inherit;
-	 		background-size: cover;
-         }
-	     	form {
-			max-width: 550px;
-			margin: 0 auto;
-			padding: 20px;
-			background:transparent;
-			border-radius: 50px;
-		  }
-		  input[type="text"], input[type="email"], input[type="tel"], input[type="password"] {
-			width: 100%;
-			padding: 10px;
-			margin: 5px 0;
-			border: none;
-			border-radius: 5px;
-			background: rgb(238, 234, 228);
-		}
-		input[type="submit"] {
-			width: 100%;
-			background: #4CAF50;
-			color: #fff;
-			padding: 10px;
-			margin: 10px 0;
-			border: none;
-			border-radius: 5px;
-			cursor: pointer;
-			font-size: 16px;
-		}
-		button{
-			background-color: #4CAF50;
-			border: none;
-			color: white;
-			padding: 10px;
-			text-align: center;
-			text-decoration: none;
-			display: inline-block;
-			font-size: 18px;
-			margin: 4px 2px;
-			cursor: pointer;
-		}
-		input[type="submit"]:hover {
-			background: #45a049;
-		}
-	</style>
-	<script type="text/javascript">
-	</script>
-
-	
+    <title>admin add product</title>
+    <style>
+        header {
+            padding: 10px;
+        }
+        h2 {
+            color: rgb(1, 7, 1);
+        }
+        ul {
+            background-color: black;
+        }
+        a {
+            color: white;
+        }
+        footer {
+            color: black;
+        }
+        body {
+            background-color: aquamarin;
+            backface-visibility: inherit;
+            background-size: cover;
+        }
+        form {
+            max-width: 550px;
+            margin: 0 auto;
+            padding: 20px;
+            background: transparent;
+            border-radius: 50px;
+        }
+        input[type="text"], input[type="email"], input[type="tel"], input[type="password"], textarea {
+            width: 100%;
+            padding: 10px;
+            margin: 5px 0;
+            border: none;
+            border-radius: 5px;
+            background: rgb(238, 234, 228);
+        }
+        input[type="submit"] {
+            width: 40%;
+            background: #4CAF50;
+            color: #fff;
+            padding: 10px;
+            margin: 5px 0;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            font-size: 16px;
+        }
+        input[type="submit"]:hover {
+            background: #45a049;
+        }
+        button {
+            background-color: #4CAF50;
+            border: none;
+            color: white;
+            padding: 10px;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            font-size: 18px;
+            margin: 4px 2px;
+            cursor: pointer;
+        }
+        input[type="file"] {
+            width: 100%;
+            padding: 10px;
+            margin: 5px 0;
+            border: none;
+            border-radius: 5px;
+            background: rgb(238, 234, 228);
+        }
+    </style>
 </head>
+
 <header>
 </header>
+
 <footer>
-	<ul>
+    <ul>
+    </ul>
+</footer>
 
-	</ul>
-	</footer>
 <body>
+    <form action="http://127.0.0.1:5000/admin/portal/add" method="post" enctype="multipart/form-data">
+        <b>
+            <h2><center>WELCOME ADMIN<br><br>ADD YOUR PRODUCTS<br><br></center></h2>
 
-	<form action="jdbc:mysql://127.0.0.1:3306/onlinefashionshopping","root","Aspire@12345">
-		<b>
-		<h2><CENTER>WELCOME ADMIN
+            <label for="product_name">ENTER THE PRODUCT NAME</label>
+            <input type="text" id="product_name" name="product_name" required>
 
-<BR>
-<br>ADD YOUR PRODUCTS
-<BR><BR>
-        </CENTER></h2>
-		<label for="ENTER THE PRODUCT_NAME">ENTER THE PRODUCT NAME</label>
-		<input type="text" id="product_name" name="product_name" required>
+            <label for="quantity">ENTER THE NO OF THE PRODUCTS</label>
+            <input type="text" id="quantity" name="quantity" required>
 
-		<label for="ENTER THE NO OF PRODUCT_QUANTITY">ENTER THE  NO OF THE PRODUCTS </label>
-		<input type="text" id="" name="" pattern="[0-9]{10}" required>
+            <label for="price">ENTER THE PRICE</label>
+            <input type="text" id="price" name="price" required>
 
-		<label for="ENTER THE PRICE">ENTER THE PRICE</label>
-		<input type="teXT" id="" name="" pattern="[0-9]{10}" required>
+            <label for="description">ENTER THE DESCRIPTION</label>
+            <textarea id="description" name="description" required></textarea>
 
-		<label for="ENTER THE DESCRIPTION">ENTER THE DESCRIPTION</label>
-		<input type="TEXT" id="" name="" required>
+            <!-- Input for image upload -->
+            <label for="product_image">UPLOAD PRODUCT IMAGE</label>
+            <input type="file" id="product_image" name="product_image" accept="image/png, image/jpeg, image/jpg" required>
 
-	<BR>
-	   <CENTER><button  type="button" onclick="window.location.href=''">ADD PRODUCT</button></CENTER>
-	</b>
-	</form>
+            <br>
+            <center><input type="submit" value="ADD PRODUCT"></center>
+        </b>
+    </form>
 </body>
 </html>
-
