--- a/templates/menu_bar.html
+++ b/templates/menu_bar.html
@@ -15,7 +15,7 @@
                 <li><a href="/profile">My profile</a></li>
                 <li><a href="/about_us">About Us</a></li>
                 <li><a href="/contact_us">Contact Us</a></li>
-                <li><a href="/logout">Logout</a></li>
+                <li><a href="/logout/user">Logout</a></li>
             </ul>
         </nav>
     </header>
