modified:   app.py 	modified:   templates/profile.html

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -13,9 +13,9 @@
         <div class="orders">
             <h2 class="profile_h2">Orders</h2>
             <ul id="orders-list">
-                <li>Order #1: Laptop - <strong>Delivered</strong></li>
-                <li>Order #2: Smartphone - <strong>Shipped</strong></li>
-                <li>Order #3: Headphones - <strong>Pending</strong></li>
+                <li style="color:black">Order #1: Laptop - <strong>Delivered</strong></li>
+                <li style="color:black">Order #2: Smartphone - <strong>Shipped</strong></li>
+                <li style="color:black">Order #3: Headphones - <strong>Pending</strong></li>
             </ul>
         </div>
     </div>
